public/style.css
body {
    justify-content: center;
    align-items: center;
    font-family: Arial, sans-serif;
    margin: 0;
    /*height: auto;*/
    overflow-y: auto;
    padding: 0;
    
}

.header {
    position: relative;
    top: 0;
    left: 0;
    background-color: #424bac;
    color: white;
    width: 100%;
    z-index: 1000;
    height: 35vh;
}

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-text h1{
    margin: 0;
    font-size: 24px;
    padding-left: 20px;
}

.header-text p{
    margin: 5px 0 0;
    font-size: 16px;
    align-items: center;
    padding-left: 20px;
}

.header-logo{
    display: flex;
    align-items:center;
    justify-content: center;
}
.header-logo img{
    height: 200px;
    width: 200px;;
}

.navbar{
    background-color: #000000;
    display:flex;
    justify-content: center;
    padding: 10px 0;
}

.navbar button {
    background-color: #000000;
    color: white;
    border: none;
    padding: 10px 20px;
    margin: 0 10px;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;;
    border-radius: 5px;
    transition: background-color 0.3s ease;
}

.navbar button:hover {
    background-color: white;
    color: #d32f2f;
}
/*Registration page*/
.register-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #f0f0f0;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    position: relative;
    height: auto;
    width: 90%;
}

/*Courses page*/
.main-courses{
    display: flex;
    height: 100%;
}

.courses-sidebar{
    position: relative;
    display:flex;
    flex-direction: column;
    
    width: 25%;
    height: 100%;
    background-color: #d32f2f;
    color: white;
    padding: 20px;
    font-size: 25px;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
    
}

.courses-sidebar ul {
    list-style-type: none;
    padding: 0;
}


.courses-sidebar li {
    margin: 10px 0;
    color: white;
}

.courses-sidebar button {
    width: 100%;
    background-color: #d32f2f;
    border: none;
    color: white;
    padding: 10px;
    cursor: pointer;
    text-align: left;
    font-weight: bold;
}

.courses-sidebar button:hover {
    background-color: #ccc;
}

.course-description {
    width: 75%;
    padding: 20px;
    text-align: center;
    background-color: #aaaaaa;
}

.course-description h2 {
    margin-top: 0;
    margin-left: 20px;
    font-weight: bold;
    text-align: center;
}

.course-description p {
    font-size: 16px;
    line-height: 1.5;
    text-align: center;
    margin: 20px 0;
}

/*Home page*/

.index-container{
    display:flex;
    flex-direction: column;
    align-items: center;
}

.left-index{
    width: 100%;
    align-items: center;
    justify-content: center;
    background-color: azure;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
}

.chris-image{
    width: 50%;
    height: auto;
    margin: 0;
    height: auto;;
    border-radius: 5px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
}

.index-description{
    background-color: azure;
    text-align: center;
    font-size: 16px;
    line-height: 1.5;
    padding: 15px;
}

.right-index{
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #cccccc;
    margin: 0;
}

.car-image{
    
    width: 33%;
    height: auto;
    margin: 0;
    object-fit: cover;
    border-radius: 2px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
}


/*Login screen*/ 
.login-container{
    width: 95%;
    height: 50vh;
    margin: 50px auto;
    padding: 20px;
    background-color: #cccccc;
    text-align: center;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.login-container h2{
    margin-bottom: 20px;
    font-size: 22px;
    color: #d32f2f;
}

#loginForm input {
    width: 95%;
    padding: 10px;
    margin: 15px 0;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 16px;
}
/* Submit Button */
#loginForm button {
    width: 100%; /* Full width for the button */
    padding: 10px;
    background-color: #424bac; /* Match the header color */
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
}

#loginForm button:hover {
    background-color: #333; /* Darker color on hover */
}

/*Footer section*/
.footer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #b5bbff;
    color: white;
    padding: 20px;
    font-size: 14px;
}

.footer-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.footer-section h3{
    margin-bottom: 10px;
    font-size: 16px;
}

.footer-icon{
    margin: 0 10px;
}

.footer-icon img{
    width: 30px;
    height: 30px;
    transition: transform 0.3s ease;
}
.footer-icon img:hover {
    transform: scale(1.2); /* Slight zoom effect on hover */
}



/*Adjustments for smaller screens */
@media (max-width: 768px) {

    /*Adjust header height*/
    .header {
        height : 30vh;
    }
    /*Make nav bar buttons smaller*/
    .navbar button{
        margin: 0 5px;
        padding: 5px 10px;
        font-size: 12px;
    }


    .chris-image {
        width: 50%;
        height: auto;
    }

    .index-description{
        width : 50%;
        padding: 10px;
        font-size: 14px;
    }

    .right-index{
        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
    }

    .car-image {
        width: 33%;
        height: auto;
        margin: 0;
    }



}

